--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ footer { text-align:center; padding:10px; background:#282840; position:fixed; bo
 
 <main>
   <ul>
-    <li><a href="games/1v1/index.html">1v1</a></li>
-    <li><a href="games/agesofconflict/index.html">Ages Of Conflict</a></li>
-    <li><a href="games/block blast/index.html">Block Blast</a></li>
-    <li><a href="games/kindergarten 1/index.html">Kindergarten 1</a></li>
-    <li><a href="games/kindergarten 2/index.html">Kindergarten 2</a></li>
-    <li><a href="games/kindergarten 3/index.html">Kindergarten 3</a></li>
+    <li><a href="games/1v1/">1v1</a></li>
+    <li><a href="games/agesofconflict/">Ages Of Conflict</a></li>
+    <li><a href="games/block blast/">Block Blast</a></li>
+    <li><a href="games/kindergarten 1/">Kindergarten 1</a></li>
+    <li><a href="games/kindergarten 2/">Kindergarten 2</a></li>
+    <li><a href="games/kindergarten 3/">Kindergarten 3</a></li>
   </ul>
 </main>
 
