--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ footer { text-align:center; padding:10px; background:#282840; position:fixed; bo
   <ul>
     <li><a href="games/1v1/">1v1</a></li>
     <li><a href="games/agesofconflict/">Ages Of Conflict</a></li>
-    <li><a href="games/block blast/">Block Blast</a></li>
-    <li><a href="games/kindergarten 1/">Kindergarten 1</a></li>
-    <li><a href="games/kindergarten 2/">Kindergarten 2</a></li>
-    <li><a href="games/kindergarten 3/">Kindergarten 3</a></li>
+    <li><a href="games/block%20blast/">Block Blast</a></li>
+    <li><a href="games/kindergarten%201/">Kindergarten 1</a></li>
+    <li><a href="games/kindergarten%202/">Kindergarten 2</a></li>
+    <li><a href="games/kindergarten%203/">Kindergarten 3</a></li>
   </ul>
 </main>
 
