--- a/index.html
+++ b/index.html
@@ -3,21 +3,96 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Red's Game Hub</title>
+<title>Jaime Emergency Backup Site</title>
 <style>
-body { font-family: Arial, sans-serif; background:#1e1e2f; color:#fff; margin:0; text-align:center; }
-header { padding:20px; background:#282840; }
-header h1 { margin:0; color:#f5a623; }
-ul { list-style:none; padding:0; max-width:600px; margin:auto; }
-li { margin:10px 0; }
-a { display:block; text-decoration:none; background:#3e3e5e; padding:15px; border-radius:10px; color:#fff; font-weight:bold; transition:0.2s;}
-a:hover { background:#f5a623; color:#000; }
-footer { text-align:center; padding:10px; background:#282840; position:fixed; bottom:0; width:100%; }
+/* Base styles */
+body {
+  font-family: Arial, sans-serif;
+  background: radial-gradient(circle at top, #0d0d1a, #1e1e2f);
+  color: #fff;
+  margin: 0;
+  text-align: center;
+}
+
+header {
+  padding: 30px 20px;
+  background: linear-gradient(90deg, #ff4f4f, #ffb347);
+  box-shadow: 0 0 20px rgba(255, 79, 79, 0.5);
+}
+
+header h1 {
+  margin: 0;
+  font-size: 1.5em;
+  color: #0d0d1a;
+  text-shadow: 2px 2px #000;
+}
+
+main {
+  padding: 40px 20px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  max-width: 700px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+}
+
+li a {
+  display: block;
+  padding: 20px;
+  border-radius: 15px;
+  text-decoration: none;
+  background: linear-gradient(145deg, #3e3e5e, #5e5e8a);
+  color: #fff;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  position: relative;
+  overflow: hidden;
+}
+
+li a::after {
+  content: '';
+  position: absolute;
+  top: 0; left: -100%;
+  width: 100%;
+  height: 100%;
+  background: rgba(255,255,255,0.1);
+  transform: skewX(-20deg);
+  transition: all 0.5s ease;
+}
+
+li a:hover::after {
+  left: 100%;
+}
+
+li a:hover {
+  background: linear-gradient(145deg, #ff4f4f, #ffb347);
+  color: #0d0d1a;
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(255,79,79,0.5);
+}
+
+footer {
+  text-align: center;
+  padding: 15px;
+  background: linear-gradient(90deg, #282840, #3e3e5e);
+  box-shadow: 0 -5px 15px rgba(0,0,0,0.3);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  font-size: 0.8em;
+}
 </style>
 </head>
 <body>
+
 <header>
-  <h1>Red's Game Hub</h1>
+  <h1>Jaime Emergency Backup Site</h1>
 </header>
 
 <main>
@@ -31,6 +106,7 @@ footer { text-align:center; padding:10px; background:#282840; position:fixed; bo
   </ul>
 </main>
 
-<footer>&copy; 2025 Red's Game Hub</footer>
+<footer>&copy; 2025 Jaime Emergency Backup Site</footer>
+
 </body>
 </html>
