--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jaime Emergency Backup Site</title>
+<title>EBS</title>
+<link rel="icon" type="image/png" href="assets/reds.png">
 <style>
 /* Base styles */
 body {
@@ -92,7 +93,7 @@ footer {
 <body>
 
 <header>
-  <h1>Jaime Emergency Backup Site</h1>
+  <h1>EBS</h1>
 </header>
 
 <main>
@@ -106,7 +107,7 @@ footer {
   </ul>
 </main>
 
-<footer>&copy; 2025 Jaime Emergency Backup Site</footer>
+<footer>&copy; 2025 EBS</footer>
 
 </body>
 </html>
