--- a/index.html
+++ b/index.html
@@ -3,89 +3,89 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EBS</title>
+<title>JAIMES EMERGENCY BACKUP SITES</title>
 <link rel="icon" type="image/png" href="assets/reds.png">
 <style>
 body {
   font-family: Arial, sans-serif;
   background: radial-gradient(circle at top, #0d0d1a, #1e1e2f);
-  color: #fff;
-  margin: 0;
-  text-align: center;
+  color:#fff;
+  margin:0;
+  text-align:center;
 }
 
 header {
-  padding: 30px 20px;
+  padding:30px 20px;
   background: linear-gradient(90deg, #ff4f4f, #ffb347);
-  box-shadow: 0 0 20px rgba(255, 79, 79, 0.5);
+  box-shadow: 0 0 20px rgba(255,79,79,0.5);
 }
 
 header h1 {
-  margin: 0;
-  font-size: 1.5em;
-  color: #0d0d1a;
+  margin:0;
+  font-size:1.5em;
+  color:#0d0d1a;
   text-shadow: 2px 2px #000;
 }
 
 main {
-  padding: 40px 20px;
+  padding:40px 20px;
 }
 
 ul {
-  list-style: none;
-  padding: 0;
-  max-width: 700px;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 20px;
+  list-style:none;
+  padding:0;
+  max-width:700px;
+  margin:auto;
+  display:grid;
+  grid-template-columns:repeat(auto-fit, minmax(220px,1fr));
+  gap:20px;
 }
 
 li a {
-  display: block;
-  padding: 20px;
-  border-radius: 15px;
-  text-decoration: none;
+  display:block;
+  padding:20px;
+  border-radius:15px;
+  text-decoration:none;
   background: linear-gradient(145deg, #3e3e5e, #5e5e8a);
-  color: #fff;
-  font-weight: bold;
-  transition: all 0.3s ease;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-  position: relative;
-  overflow: hidden;
+  color:#fff;
+  font-weight:bold;
+  transition:all 0.3s ease;
+  box-shadow:0 5px 15px rgba(0,0,0,0.3);
+  position:relative;
+  overflow:hidden;
 }
 
 li a::after {
-  content: '';
-  position: absolute;
-  top: 0; left: -100%;
-  width: 100%;
-  height: 100%;
+  content:'';
+  position:absolute;
+  top:0; left:-100%;
+  width:100%;
+  height:100%;
   background: rgba(255,255,255,0.1);
   transform: skewX(-20deg);
   transition: all 0.5s ease;
 }
 
 li a:hover::after {
-  left: 100%;
+  left:100%;
 }
 
 li a:hover {
   background: linear-gradient(145deg, #ff4f4f, #ffb347);
-  color: #0d0d1a;
+  color:#0d0d1a;
   transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(255,79,79,0.5);
+  box-shadow:0 10px 20px rgba(255,79,79,0.5);
 }
 
 footer {
-  text-align: center;
-  padding: 15px;
+  text-align:center;
+  padding:15px;
   background: linear-gradient(90deg, #282840, #3e3e5e);
   box-shadow: 0 -5px 15px rgba(0,0,0,0.3);
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  font-size: 0.8em;
+  position:fixed;
+  bottom:0;
+  width:100%;
+  font-size:0.8em;
 }
 </style>
 </head>
@@ -99,10 +99,10 @@ footer {
   <ul>
     <li><a href="games/1v1/">1v1</a></li>
     <li><a href="games/agesofconflict/">Ages Of Conflict</a></li>
-    <li><a href="games/block%20blast/">Block Blast</a></li>
-    <li><a href="games/kindergarten%201/">Kindergarten 1</a></li>
-    <li><a href="games/kindergarten%202/">Kindergarten 2</a></li>
-    <li><a href="games/kindergarten%203/">Kindergarten 3</a></li>
+    <li><a href="games/blockblast/">Block Blast</a></li>
+    <li><a href="games/kindergarten1/">Kindergarten 1</a></li>
+    <li><a href="games/kindergarten2/">Kindergarten 2</a></li>
+    <li><a href="games/kindergarten3/">Kindergarten 3</a></li>
   </ul>
 </main>
 
