the true bane of my existance
i hate my life because of this

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>JAIMES EMERGENCY BACKUP SITES</title>
+<title>EBS</title>
 <link rel="icon" type="image/png" href="assets/reds.png">
 <style>
 body {
@@ -92,17 +92,17 @@ footer {
 <body>
 
 <header>
-  <h1>EBS</h1>
+  <h1>JAIMES EMERGENCY BACKUP</h1>
 </header>
 
 <main>
   <ul>
     <li><a href="games/1v1/">1v1</a></li>
     <li><a href="games/agesofconflict/">Ages Of Conflict</a></li>
-    <li><a href="games/blockblast/">Block Blast</a></li>
-    <li><a href="games/kindergarten1/">Kindergarten 1</a></li>
-    <li><a href="games/kindergarten2/">Kindergarten 2</a></li>
-    <li><a href="games/kindergarten3/">Kindergarten 3</a></li>
+    <li><a href="games/block%20blast/">Block Blast</a></li>
+    <li><a href="games/kindergarten%201/">Kindergarten 1</a></li>
+    <li><a href="games/kindergarten%202/">Kindergarten 2</a></li>
+    <li><a href="games/kindergarten%203/">Kindergarten 3</a></li>
   </ul>
 </main>
 
