--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EBS</title>
+<title>EBS</title> <!-- Browser tab -->
 <link rel="icon" type="image/png" href="assets/reds.png">
 <style>
 body {
@@ -92,7 +92,7 @@ footer {
 <body>
 
 <header>
-  <h1>JAIMES EMERGENCY BACKUP</h1>
+  <h1>JAIMES EMERGENCY BACKUP</h1> <!-- Page header -->
 </header>
 
 <main>
@@ -103,6 +103,7 @@ footer {
     <li><a href="games/kindergarten%201/">Kindergarten 1</a></li>
     <li><a href="games/kindergarten%202/">Kindergarten 2</a></li>
     <li><a href="games/kindergarten%203/">Kindergarten 3</a></li>
+    <li><a href="games/buckshot/">Buckshot Roulette</a></li>
   </ul>
 </main>
 
